--- a/frontend/view/user/storeDetails/storeDetail_menu.html
+++ b/frontend/view/user/storeDetails/storeDetail_menu.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="/js/user/storeDetail.js" defer></script>
+    <script src="/js/user/storeDetails/storeDetail.js" defer></script>
     <link rel="stylesheet" href="/css/user/storeDetail.css">
 </head>
 <body>
