--- a/frontend/view/user/myPage.html
+++ b/frontend/view/user/myPage.html
@@ -16,7 +16,6 @@
       <link href="/css/user/owlcarousel/owl.carousel.min.css" rel="stylesheet">
       <link href="/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
       <link href="/css/user/mainlogo.css" rel="stylesheet">
-      <link href="/css/user/userLogin.css" rel="stylesheet">
       <link href="/css/user/reviewModal.css" rel="stylesheet">
       <!-- 자바스크립트 -->
        <script src="https://kit.fontawesome.com/9ebc532cee.js" crossorigin="anonymous"></script>
@@ -209,7 +208,7 @@
                   </div>
                   <div class="row">
                     <div class="col">
-                      <button class="btn btn-outline-warning" v-if="reserve.statusCodeId == 4">리뷰 작성하기</button>
+                      <button class="btn btn-outline-warning" v-if="reserve.statusCodeId == 4" @click="changeTab('reviewInsertOrUpdate', reserve.reserveId, 0, reserve.storeId)">리뷰 작성하기</button>
                       <button class="btn btn-secondary" v-if="reserve.statusCodeId == 5" disabled>리뷰 작성 완료</button>
                     </div>
                   </div>
@@ -252,12 +251,6 @@
                           <span>방문자명 : {{ reserve.name }}, {{ reserve.people }} 명</span>
                         </li>
                       </ul>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col">
-                      <button class="btn btn-outline-warning" v-if="reserve.statusCodeId == 4" @click="changeTab('reviewInsertOrUpdate')">리뷰 작성하기</button>
-                      <button class="btn btn-secondary" v-if="reserve.statusCodeId == 5" disabled>리뷰 작성 완료</button>
                     </div>
                   </div>
                 </div>
@@ -310,14 +303,15 @@
               </div>
             </div>
           </div>
-          
-          <div class="col" v-if="currentPage == 'reviewHistory'">
+          <div class="col-md-8 col-lg-8" v-if="currentPage == 'reviewHistory'">
             <h3>내가 작성한 리뷰 {{ reviewHistoryCount }}건</h3>
-              <div class="card w-100 mb-3" v-for="(review, index) in reviewHistoryData.reviewData" :key="review.reviewId">
+            <div v-for="(review, index) in reviewHistoryData.reviewData" :key="review.reviewId">
+              <div class="card mb-3">
                 <div class="card-header border">
                   <div>
-                    <div class="mt-3">
-                      <a :href="'/view/user/storeInfo?storeId='+review.storeId"><h3>{{ review.storeName }}</h3></a>
+                    <div class="mt-2">
+                      <span class="review-delete" @click="deleteReview(review.reviewId)">X</span>
+                      <h3><a :href="'/view/user/storeInfo?storeId='+review.storeId">{{ review.storeName }}</a></h3>
                     </div>
                     <div>
                       <label><i v-for="sc in review.score" class="fas fa-star text-warning"></i> | {{dateFormat(review.dateTime) }}</label>
@@ -325,29 +319,101 @@
                   </div>
                 </div>
                 <div class="card-body">
-                    <div class="row">
-                      <div class="col">
-                        <div class="thumbnail-container">
-                          <img v-for="(image, index) in review.reviewImages" @click="openReviewModal(review.reviewImages, index)" :src="image.url" class="thumbnail_image" alt="Sample Image" data-bs-toggle="modal" data-bs-target="#imageModal">
-                        </div>
+                  <div class="row">
+                    <div class="col">
+                      <div class="thumbnail-container">
+                        <img v-for="(image, index) in review.reviewImages" @click="openReviewModal(review.reviewImages, index)" :src="image.url" class="thumbnail_image" alt="Sample Image" data-bs-toggle="modal" data-bs-target="#imageModal">
                       </div>
                     </div>
-                    <div class="mt-4">
-                      <textarea class="form-control" style="height: 150px; overflow: hidden; border: none; resize: none;" readonly v-model="review.content"></textarea>
-                    </div>
-                    <p class="text-center">
-                      <button class="btn btn-outline-primary text-center form-control" @click="changeTab('reviewInsertOrUpdate', review)">리뷰 수정하기</button>
-                    </p>
+                  </div>
+                  <div class="mt-4">
+                    <textarea class="form-control" style="height: 150px; overflow: hidden; border: none; resize: none;" readonly v-model="review.content"></textarea>
+                  </div>
+                  <p class="text-center">
+                    <button class="btn btn-outline-primary text-center form-control" @click="changeTab('reviewInsertOrUpdate', review)">리뷰 수정하기</button>
+                  </p>
                 </div>
+              </div>
             </div>
           </div>
           <!-- 리뷰수정 or 생성탭 -->
-          <div class="col" v-if="currentPage == 'reviewInsertOrUpdate'">
-            
+          <div class="col-md-8 col-lg-8" v-if="currentPage == 'reviewInsertOrUpdate'">
+            <div class="card mb-3" v-if="updateReviewData">
+              <input type="file" class="invisible" id="addImageByUpdate" accept="image/jpg, image/png, image/jpeg" multiple @change="uploadImageFiles">
+              <div class="card-body">
+                <div class="modify-review-image-gallery">
+                  <div class="modify-review-image-container">
+                    <div class="modify-review-image-container">
+                      <label for="addImageByUpdate" class="pointer">
+                        <img src="/assets/addImageIcon.webp" class="thumbnail_image_modify">
+                      </label>
+                    </div>
+                  </div>
+                  <div class="modify-review-image-container" v-for="(image, index) in updateReviewData.reviewImages">
+                    <img :src="image.url" class="thumbnail_image_modify">
+                    <span class="review-image-delete" @click="deleteRequestImage(updateReviewData.reviewId, image.imageId, index)">X</span>
+                  </div>
+                  <div class="modify-review-image-container" v-for="(image, index) in insertReviewData.uploadReviewImageFiles">
+                    <img :src="image.url" class="thumbnail_image_modify">
+                    <span class="review-image-delete" @click="deleteInsertReviewImage(index)">X</span>
+                  </div>
+                </div>
+              </div>
+              <div class="mt-4 p-3">
+                <textarea class="form-control" style="height: 200px; resize: none;" v-model="updateReviewData.content"></textarea>
+              </div>
+              <div class="text-center mt-2 p-3">
+                <p>별점을 남겨주세요!</p>
+                <i v-for="index in 5" :key="index" :class="['fas', 'fa-solid', 'fa-star', 'p-1', 'score', initScore(index)]" :score-value="index" @click="scoreEvent($event, 1)"></i> 
+              </div>
+              <p class="text-center">
+              <small class="text-danger">{{ reviewErrorMsg }}</small>
+              </p>
+              <p class="text-center mt-4 p-3">
+                <button class="btn btn-outline-primary text-center form-control" @click="updateReview">수정하기</button>
+              </p>
+            </div>
+
+            <div class="card mb-3" v-else>
+              <input type="file" class="invisible" id="addImageByInsert" accept="image/jpg, image/png, image/jpeg" multiple @change="uploadImageFiles">
+              <div class="card-body">
+                <div class="modify-review-image-gallery">
+                  <div class="modify-review-image-container">
+                    <!-- <input type="file" multiple> -->
+                    <label for="addImageByInsert" class="pointer">
+                      <img src="/assets/addImageIcon.webp" class="thumbnail_image_modify">
+                    </label>
+                  </div>
+                  <div class="modify-review-image-container" v-for="(image, index) in insertReviewData.uploadReviewImageFiles">
+                    <img :src="image.url" class="thumbnail_image_modify">
+                    <span class="review-image-delete" @click="deleteInsertReviewImage(index)">X</span>
+                  </div>
+                </div>
+              </div>
+              <div class="mt-4 p-3">
+                <textarea class="form-control" style="height: 200px; resize: none;" v-model="insertReviewData.content"></textarea>
+              </div>
+              <div class="text-center mt-2 p-3">
+                <p>만족스러운 식사가 되셨나요? 별점을 남겨주세요!</p>
+                <i class="fas fa-solid fa-star score" score-value="1" @click="scoreEvent($event, 0)"></i>
+                <i class="fas fa-solid fa-star score" score-value="2" @click="scoreEvent($event, 0)"></i>
+                <i class="fas fa-solid fa-star score" score-value="3" @click="scoreEvent($event, 0)"></i>
+                <i class="fas fa-solid fa-star score" score-value="4" @click="scoreEvent($event, 0)"></i>
+                <i class="fas fa-solid fa-star score" score-value="5" @click="scoreEvent($event, 0)"></i>
+              </div>
+              <p class="text-center">
+              <small class="text-danger">{{ reviewErrorMsg }}</small>
+              </p>
+              <p class="text-center mt-4 p-3">
+                <button class="btn btn-outline-success text-center form-control" @click="uploadReview">등록하기</button>
+              </p>
+            </div>
           </div>
         </div>
       </div>
     </div>
+  </div>
+</div>
     <footer-component></footer-component>
 
     <!-- 리뷰 사진 모달 -->
