--- a/frontend/view/user/myPage.html
+++ b/frontend/view/user/myPage.html
@@ -412,28 +412,28 @@
         </div>
       </div>
     </div>
-  </div>
-</div>
-    <footer-component></footer-component>
-
-    <!-- 리뷰 사진 모달 -->
-    <div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered modal-lg">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body">
-            <img :src="reviewImageLists[currentImageIndex].url" class="img-fluid" alt="Enlarged Image">
-            <div class="mt-3">
-              <button v-if="reviewImageLists.length > 1" @click="controlImages('prev')" class="btn btn-custom">이전</button>
-              <button v-if="reviewImageLists.length > 1" @click="controlImages('next')" class="btn btn-custom">다음</button>
+      <!-- 리뷰 사진 모달 -->
+      <div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-lg">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <img :src="reviewImageLists[currentImageIndex].url" class="img-fluid" alt="원본이미지">
+              <div class="mt-3">
+                <button v-if="reviewImageLists.length > 1" @click="controlImages('prev')" class="btn btn-custom">이전</button>
+                <button v-if="reviewImageLists.length > 1" @click="controlImages('next')" class="btn btn-custom">다음</button>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
+  
+    <footer-component></footer-component>
+
 <script src="/js/user/component.js"></script>
 <script src="/js/user/myPage.js"></script>
 </body>
