reserveMapper 일부수정, js파일 수정

--- a/frontend/view/owner/index.html
+++ b/frontend/view/owner/index.html
@@ -271,7 +271,7 @@
                     <td>{{ review.userId }}</td>
                     <td>{{ review.score }}</td>
                     <td>{{ review.content }}</td>
-                    <td>{{ formatDate(review.createAt) }}</td>
+                    <td>{{ formatDateTimeStamp(review.createAt) }}</td>
                     <td>
                       <button
                         class="btn btn-danger btn-block"
