--- a/frontend/view/user/storeDetails/reviews.html
+++ b/frontend/view/user/storeDetails/reviews.html
@@ -98,15 +98,22 @@
 
 .review_images {
     display: flex;
-    gap: 1px;
-    width: 700px;
-    height: 200px;
+    width: 680px;
+    height: 220px;
     border-radius: 5px;
-    overflow: auto;
+    overflow-x: auto;
    
 }
 
-.review_images img {
+.review_img_container {
+    display: flex;
+    width: 200px;
+    height: 200px;
+    gap: 1px;
+   
+}
+
+.review_img_container img {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -135,7 +142,7 @@
     <div class="details_container">
         <div class="rating_summary">
             <div class="grid_1">
-             <h2>{{ reviewData.length }}개 리뷰 평균</h2>
+             <h3>{{ reviewData.length }}개 리뷰 평균</h3>
              <div class="average_rating">
                 <h1>⭐️</h1>
                 <strong> {{ calculateReviewScore.toFixed(1) }} </strong></div>
@@ -194,10 +201,12 @@
             </div>
             
             <div v-else class="review_images">
+                <div class="review_img_container">
                 <img v-for="(reviewImg, imgIndex) in review.reviewImages" 
                      :key="imgIndex" 
                      :src="reviewImg.url" 
                      :alt="'reviewImg-' + imgIndex">
+                </div>
             </div>
           
             <div class="review-content">
