--- a/frontend/css/user/header.css
+++ b/frontend/css/user/header.css
@@ -1,38 +1,50 @@
-.fixed-header {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  height: 80px;
-  background-color: #ffffff;
-  z-index: 1000;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+header {
+    background-color: white;
+    border-bottom: 2px solid #f0f0f0;
+    padding: 10px 20px;
+    display: flex;
+    justify-content: center;
 }
 
-.navbar-brand {
-  display: flex;
-  align-items: center;
+.header_container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 800px;
+   width: 100%;
 }
 
-.navbar-brand img {
-  margin-left: 80px;
+.search_container{
+    position: relative;
+    left: -20px;
 }
 
-.form-control {
-  max-width: none;
-  background-color: #f5f5f5;
-  border: 1px solid #ddd;
-  color: #333;
-  border-radius: 25px;
+.search_icon {
+    position: absolute;
+    left: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    color: orange; 
 }
 
-.btn .fas.fa-bars {
-  font-size: 2rem;
-  color: #ff9800; /* 메뉴 버튼을 귀여운 주황색으로 변경 */
+.search_box {
+    width: 400px;
+    border: 1px solid #ccc;
+    padding: 5px 10px 5px 40px;
+    border-radius: 30px;
+    background-color: #F0F0F0
 }
-.btn.dropdown-toggle {
-  margin-right: 50px;
+
+.icons_sec {
+    display: flex;
+    align-items: center;
 }
-.logNBotton {
-  margin-left: auto;
-  margin-right: 200px;
+
+.icons_sec i {
+    
+    color:rgb(254, 180, 44);
+    font-size: 20px;
+    cursor: pointer;
+    margin-left: 20px;
+    margin-right: 5px;
 }
