점주 화면 개발 통합 (#153)
* 10/31 owner/index.html 1차 수정

* 11/1 점주 index.html, review.html 수정

* pom.properties

* pom.properties

* 11/01 index.html review.html 일부 수정

* 1101 review.html pagination 추가

* index.html 일부 수정

* index.js index.html 차트 데이터 할당 전

* index.html 일부 수정

* 알림, 결제정보 api, 차트데이터 할당, SalesMapper 일부 수정

* 점주 component, 쿠폰 화면 수정 진행중

* 병합 테스트

* main merge전 커밋

main merge전 커밋

* menu.js, menu.html 초안

* (frontend)menu.html js 수정, (backend)PUT:/menu 일부 수정

* review.html, reserve.js 검색기능 추가

menu.js, menu.html 초안
(frontend)menu.html js 수정, (backend)PUT:/menu 일부 수정
review.html, reserve.js 검색기능 추가

* 알림창 수청, 예약 리뷰 페이지네이션 수정, fullcalendar에 일별 매출 표시

* fullCalendar 데이터 할당, reserve.html 예약 가능시간  검색기능 추가, 매출 데이터수정

* 가게수정, 쿠폰 개발중

* ownerOnly 어노테이션 추가 및 js 일부수정

분기 수익 데이터 추가, mapper 일부 수정
알림 데이터 삭제 크론 설정 및 view단 아이콘 일부 변경

* reserveMapper 일부수정, js파일 수정

* 어노테이션 적용 및 예약슬롯 에러 수정

* 점주 개발 완료

* 수정시 오픈,마감 시간오류 수정 및 생성시 파일처리 버그 수정

---------

Co-authored-by: Hyunmyoung Lee <hyunmyoung266@gmail.com>
Co-authored-by: yhs99 <45925957+yhs99@users.noreply.github.com>

--- a/frontend/css/owner/review.css
+++ b/frontend/css/owner/review.css
@@ -1,11 +1,20 @@
-.reviewList{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+body {
+  font-family: "Apple SD Gothic Neo";
 }
 
+.reviewList {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
-.orderMethods{
-    display: flex;
-    gap: 10px;
+.reviewList {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.orderMethods {
+  display: flex;
+  gap: 10px;
 }
